# EnsemblLite

./: .gitignore  .hgignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  linters.yml  release.yml  testing_develop.yml
src/ensembl_cli/: _aligndb.py  _config.py  _db_base.py  _genome.py  _genomedb.py  _homologydb.py  _site_map.py  aligndb.py  cli.py  download.py  emf.py  ftp_download.py  homologydb.py  install.py  maf.py  name.py  species.py  util.py
src/ensembl_cli/data/: ensembldb_download.cfg
src/ensembl_lite/: __init__.py  _align.py  _aligndb.py  _config.py  _db_base.py  _download.py  _emf.py  _faster_fasta.py  _ftp_download.py  _genome.py  _genomedb.py  _homology.py  _homologydb.py  _install.py  _maf.py  _name.py  _site_map.py  _species.py  _storage_mixin.py  _util.py  cli.py  convert.py  download.py  emf.py  ftp_download.py  install.py  maf.py  name.py  species.py  util.py
src/ensembl_lite/data/: sample.cfg  species.tsv
src/ensembl_tui/: __init__.py  _align.py  _annotation.py  _config.py  _download.py  _ftp_download.py  _genome.py  _homology.py  _ingest_align.py  _ingest_annotation.py  _ingest_homology.py  _install.py  _maf.py  _mysql_core_attr.py  _name.py  _site_map.py  _species.py  _storage_mixin.py  _util.py  cli.py
tests/: __init__.py  conftest.py  test_align.py  test_aligndb.py  test_annotation.py  test_cli.py  test_config.py  test_convert.py  test_dbs.py  test_download.py  test_emf.py  test_genome.py  test_genomedb.py  test_homology.py  test_homologydb.py  test_install.py  test_installed.py  test_maf.py  test_name.py  test_site_map.py  test_species.py  test_util.py
tests/data/: one2one_homologies.tsv  sample.maf
