[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ensembl_lite"
description = """Ensembl cli tools"""
version = "2023.7.9a1"
authors = [
    { name = "Gavin Huttley", email = "Gavin.Huttley@anu.edu.au"},
]
keywords = ["biology", "genomics", "evolution", "bioinformatics"]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = ["blosc2",
        "click",
        "cogent3 @ git+https://github.com/cogent3/cogent3.git@develop",
        "h5py",
        "hdf5plugin",
        "numba",
        "numpy",
        "rich",
        "scitrack",
        "typing_extensions",
        "trogon",
        "unsync",
        # restricting wakepy to macOS for now
        "wakepy>0.7; os_name == 'darwin'",
        ]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
    ]

[project.urls]
Documentation = "https://github.com/cogent3/EnsemblLite"
"Bug Tracker" = "https://github.com/cogent3/EnsemblLite/issues"
"Source Code" = "https://github.com/cogent3/EnsemblLite"

[project.scripts]
elt = "ensembl_lite.cli:main"

[project.optional-dependencies]
test = [
    "black==24.4.2",
    "isort==5.13.2",
    "click==8.1.3", # black needs this pinned
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nox"]
doc  = ["click==8.1.3",
        "sphinx",
        "sphinx-autobuild",
        "sphinx>=1.6",
        "sphinx_book_theme",
        "sphinx_design",
        "sphinxcontrib-bibtex"]
dev = ["black==24.4.2",
       "isort==5.13.2",
       "click==8.1.3",
       "cogapp",
       "flit",
       "ipykernel",
       "ipython",
       "ipywidgets",
       "jupyter-sphinx",
       "jupyter_client",
       "jupyterlab",
       "jupytext",
       "kaleido",
       "nbconvert>5.4",
       "nbformat",
       "nbsphinx",
       "nox",
       "numpydoc",
       "pandas",
       "pillow",
       "plotly",
       "psutil",
       "pytest",
       "pytest-cov",
       "pytest-xdist",
       "scriv",
       "sphinx",
       "sphinx-autobuild",
       "sphinx_book_theme",
       "sphinx_design",
       "sphinxcontrib-bibtex"]

[tool.flit.sdist]
include = ["doc/", "requirements.txt", "src/*", "pyproject.toml"]
exclude = ["doc/*.html"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests that require internet access  (deselect with '-m \"not internet\"')"
    ]
norecursedirs = ["doc", ".nox", "working"]
addopts = ["--strict-config"]
testpaths = "tests"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.venv
  | _build
  | build
  | dist
  | tests/data
)/
'''

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
use_parentheses=true
src_paths = ["src", "tests","doc","noxfile.py"]

[tool.scriv]
format="md"
categories=["Contributors", "ENH", "BUG", "DOC", "Deprecations", "Discontinued"]
output_file="changelog.md"
version="literal: src/cogent3/__init__.py:__version__"
skip_fragments="README.*"
new_fragment_template="file: changelog.d/templates/new.md.j2"
entry_title_template="file: changelog.d/templates/title.md.j2"
